# llm-playground

./: .gitignore  pyproject.toml  requirements.txt
deepseek/: deepseek.ipynb
gemini/: main.ipynb
gradio/: chatbot.py  helloworld.py
langchain/gemini/baker/: main.ipynb  requirements.txt
langchain/gemini/quickstart/: classification.ipynb  extraction.ipynb  semantic-search.ipynb  translator.ipynb
langgraph/: quickstart.ipynb  samplegraph.ipynb
langgraph/chatbot/: main.ipynb
langgraph/chatbot-app/src/agent/: graph.py
langgraph/hf-agent-course/: doc-analysis.ipynb  mail-sorting.ipynb
langgraph/hf-agent-course/agentic-rag/smolagents/: agent.py  retriever.py  tools.py
litellm/: main.ipynb
llama-index/: hf-agent-course-unit3-tools.ipynb  hf_agent_course_unit3_components.ipynb
mcp/hf-course-unit2/client-smolagents/: client-sse.py  client.py
pydantic/: example.ipynb  langchain.ipynb
smolagents/: agent-gradio.py  hf-agent-course-unit2-multiagents.ipynb  hf-agent-course-unit2.ipynb  rag.ipynb  text-to-sql.ipynb  unit2-quize.ipynb  vision_web_browser.py  web-browser.ipynb
