[project]
name = "llm-playground"
version = "0.1.0"
description = "LLM playground"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "duckduckgo-search>=8.0.4",
    "fastmcp>=2.9.2",
    "gradio[mcp]>=5.30.0",
    "helium>=5.1.1",
    "huggingface-hub[mcp]>=0.33.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaleido>=1.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.25",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.10",
    "langgraph-api>=0.2.66",
    "langgraph-cli[inmem]>=0.3.3",
    "llama-index>=0.12.43",
    "mcp[cli]>=1.9.4",
    "openai>=1.91.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "selenium>=4.33.0",
    "smolagents[gradio,mcp]>=1.19.0",
    "textblob>=0.19.0",
]
