[project]
name = "llm-playground"
version = "0.2.0"
description = "LLM playground"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets",
    "duckduckgo-search",
    "fastmcp",
    "gradio[mcp]",
    "helium>=5.1.1",
    "huggingface-hub[mcp]",
    "ipykernel",
    "ipywidgets",
    "kaleido",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-litellm",
    "langchain-openai",
    "langchain-tavily",
    "langgraph",
    "langgraph-api",
    "langgraph-cli[inmem]",
    "litellm",
    "llama-index",
    "mcp[cli]",
    "openai",
    "pandas",
    "pillow",
    "plotly",
    "pypdf",
    "python-dotenv",
    "rank-bm25",
    "selenium",
    "sentence-transformers",
    "smolagents[gradio,mcp]",
    "sqlalchemy",
    "textblob",
]
